Factor out code for FPS calculation into SkyMapDrawAbstract class and comment out actual printing to stderr.

It's somewhat pointless to calculate FPS and then throw it away
but it could be useful for debugging.

BUG: 270779